ent/api/v1: propagate routes via privnet addressing response
Currently, the Cilium CNI plugin automatically configures two hard-coded
routes for each IP family, a default route with a link local address as
nexthop, and one for the given link local address.

Let's generalize this logic in preparation for the subsequent support for
multi-NIC pods, and the consequent need for configuring different routes
for each different interface, letting the desired set of routes to be
propagated as part of the addressing response. No behavioral change is
introduced at this stage.
